[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-http"
version = "0.20.1"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.18"
data-encoding.workspace = true
delegate.workspace = true
futures.workspace = true
http = { version = "1.0", default-features = false }
once_cell = { version = "1.17", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots", "connect"], default-features = false }
tracing.workspace = true
warpgate-admin = { version = "*", path = "../warpgate-admin", default-features = false }
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
warpgate-tls = { version = "*", path = "../warpgate-tls", default-features = false }
warpgate-core = { version = "*", path = "../warpgate-core", default-features = false }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities", default-features = false }
warpgate-web = { version = "*", path = "../warpgate-web", default-features = false }
warpgate-sso = { version = "*", path = "../warpgate-sso", default-features = false }
percent-encoding = { version = "2.1", default-features = false }
uuid = { version = "1.3", features = ["v4"], default-features = false }
regex.workspace = true
url = { version = "2.4", default-features = false }
