[package]
edition = "2024"
license = "Apache-2.0"
name = "warpgate-protocol-http"
version = "0.23.3"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cookie = "0.18"
data-encoding.workspace = true
delegate.workspace = true
futures.workspace = true
http = { version = "1.0", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
reqwest.workspace = true
reqwest.features = ["json"]
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
warpgate-admin = { path = "../warpgate-admin", default-features = false }
warpgate-aws = { path = "../warpgate-aws", default-features = false }
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-common-http = { path = "../warpgate-common-http" }
warpgate-ca = { path = "../warpgate-ca", default-features = false }
warpgate-tls = { path = "../warpgate-tls", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
warpgate-web = { path = "../warpgate-web", default-features = false }
warpgate-sso = { path = "../warpgate-sso", default-features = false }
percent-encoding = { version = "2.1", default-features = false }
subtle = "2"
uuid.workspace = true
regex.workspace = true
url = { version = "2.4", default-features = false }
