[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-kubernetes"
version = "0.23.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait = { version = "0.1", default-features = false }
base64 = { version = "0.22", default-features = false }
bytes.workspace = true
dashmap = { version = "6.0", default-features = false }
futures.workspace = true
http = { version = "1.0", default-features = false }
md5 = { version = "0.7", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest.features = ["json"]
rustls.workspace = true
sea-orm.workspace = true
secrecy = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false }
time.workspace = true
tracing.workspace = true
url = { version = "2.0", default-features = false }
uuid.workspace = true
warpgate-aws = { path = "../warpgate-aws", default-features = false }
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-common-http = { path = "../warpgate-common-http", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
warpgate-tls = { path = "../warpgate-tls", default-features = false }
warpgate-ca = { path = "../warpgate-ca", default-features = false }
tokio-tungstenite.workspace = true
reqwest-websocket.workspace = true
