[package]
name = "warpgate-protocol-kubernetes"
version = "0.27.0-beta.2"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = { version = "0.22", default-features = false }
bytes.workspace = true
dashmap = { version = "6.2", default-features = false }
futures.workspace = true
http.workspace = true
md5 = { version = "0.8", default-features = false }
poem.workspace = true
poem-openapi.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest-websocket.workspace = true
rustls.workspace = true
sea-orm.workspace = true
secrecy = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["serde-well-known"] }
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false }
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
warpgate-aws = { path = "../warpgate-aws", default-features = false }
warpgate-ca = { path = "../warpgate-ca", default-features = false }
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-common-http = { path = "../warpgate-common-http", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
warpgate-sso = { path = "../warpgate-sso", default-features = false }
warpgate-tls = { path = "../warpgate-tls", default-features = false }
