[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-mysql"
version = "0.18.0"

[dependencies]
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
warpgate-core = { version = "*", path = "../warpgate-core", default-features = false }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities", default-features = false }
warpgate-database-protocols = { version = "*", path = "../warpgate-database-protocols", default-features = false }
anyhow = { version = "1.0", features = ["std"], default-features = false }
async-trait = { version = "0.1", default-features = false }
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1.3", features = ["v4"], default-features = false }
bytes.workspace = true
mysql_common = { version = "0.34", default-features = false }
flate2 = { version = "1", features = ["zlib"], default-features = false }
rand.workspace = true
sha1 = { version = "0.10", default-features = false }
password-hash.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
thiserror.workspace = true
webpki = { version = "0.22", default-features = false }
once_cell = { version = "1.17", default-features = false }
