[package]
name = "warpgate-protocol-postgres"
version = "0.27.0-beta.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
humantime = { version = "2.1", default-features = false }
pgwire = { version = "0.40", default-features = false, features = [
    "server-api-aws-lc-rs",
] }
rand.workspace = true
rsasl = { version = "2.3", default-features = false, features = [
    "config_builder",
    "scram-sha-2",
    "std",
    "plain",
    "provider",
] }
rustls.workspace = true
rustls-native-certs = { version = "0.8", default-features = false }
socket2 = { version = "0.6", features = ["all"], default-features = false }
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
uuid.workspace = true
warpgate-aws = { path = "../warpgate-aws", default-features = false }
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-common-http = { path = "../warpgate-common-http", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-tls = { path = "../warpgate-tls", default-features = false }
