[package]
edition = "2024"
license = "Apache-2.0"
name = "warpgate-protocol-rdp"
version = "0.23.4"
publish = false

[dependencies]
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
warpgate-desktop-auth = { path = "../warpgate-desktop-auth" }
warpgate-desktop-ui = { path = "../warpgate-desktop-ui" }
warpgate-tls = { path = "../warpgate-tls" }
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
ironrdp = { version = "0.17", features = [
    "connector",
    "session",
    "graphics",
    "input",
] }
ironrdp-server = "0.13"
ironrdp-tokio = "0.10"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
tokio = { workspace = true, features = [
    "io-util",
    "net",
    "sync",
    "macros",
    "time",
    "rt",
    "fs",
] }
tokio-stream.workspace = true
tracing.workspace = true
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
