[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-remoterun"
version = "0.18.0"

[dependencies]
anyhow = { version = "1.0", features = ["std"], default-features = false }
async-trait = { version = "0.1", default-features = false }
futures.workspace = true
kube = { version = "0.99", features = ["client", "runtime", "ws"], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_32"], default-features = false }
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.20", features = ["process", "macros", "rt-multi-thread"], default-features = false }
tracing.workspace = true
uuid.workspace = true
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
warpgate-core = { version = "*", path = "../warpgate-core", default-features = false }
