[package]
edition = "2021"
license = "Apache-2.0"
name = "warpgate-protocol-ssh"
version = "0.15.0"

[dependencies]
ansi_term = { version = "0.12", default-features = false }
anyhow = { version = "1.0", features = ["std"], default-features = false }
async-trait = { version = "0.1", default-features = false }
bimap = { version = "0.6", default-features = false, features = ["std"] }
bytes.workspace = true
dialoguer.workspace = true
curve25519-dalek = { version = "4.0.0", default-features = false } # pin due to build fail on x86
ed25519-dalek = { version = "2.0.0", default-features = false } # pin due to build fail on x86 in 2.1
futures.workspace = true
russh.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
time = { version = "0.3", default-features = false }
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1.3", features = ["v4"], default-features = false }
warpgate-common = { version = "*", path = "../warpgate-common", default-features = false }
warpgate-core = { version = "*", path = "../warpgate-core", default-features = false }
warpgate-db-entities = { version = "*", path = "../warpgate-db-entities", default-features = false }
zeroize = { version = "^1.5", default-features = false }
