[package]
name = "warpgate-protocol-ssh"
version = "0.25.2"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bimap = { version = "0.6", default-features = false, features = ["std"] }
bytes.workspace = true
curve25519-dalek = { version = "4.0.0", default-features = false } # pin due to build fail on x86
dialoguer.workspace = true
ed25519-dalek = { version = "2.0.0", default-features = false } # pin due to build fail on x86 in 2.1
futures.workspace = true
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
    "unstable-backend-writer",
] }
russh.workspace = true
sea-orm.workspace = true
serde.workspace = true
termcolor = { version = "1", default-features = false }
termwiz = { version = "0.22", default-features = false }
thiserror.workspace = true
time = { version = "0.3", default-features = false }
tokio.workspace = true
tracing.workspace = true
tui-input = { version = "0.14", default-features = false, features = [
    "ratatui-crossterm",
] }
url.workspace = true
uuid.workspace = true
warpgate-aws = { path = "../warpgate-aws", default-features = false }
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-common-http = { path = "../warpgate-common-http", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
zeroize = { version = "^1.5", default-features = false }
