[package]
edition = "2024"
license = "Apache-2.0"
name = "warpgate-protocol-vnc"
version = "0.23.4"
publish = false

[dependencies]
warpgate-common = { path = "../warpgate-common", default-features = false }
warpgate-core = { path = "../warpgate-core", default-features = false }
warpgate-db-entities = { path = "../warpgate-db-entities", default-features = false }
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
thiserror.workspace = true
vnc = { package = "vnc-rs", version = "0.5" }
